# privacy-fedlora

./: .env.example  .gitignore  Abstract.md  README.md  main.py  pyproject.toml  requirements.txt
agent_tasks/2_selective_participation/: experiment.md
configs/: c3_experiment.json  c3_experiment_rishi.json  fedlora_squad_nq.json  fedlora_squad_triviaqa.json  fedlora_summarization.json
scripts/: run_c3_experiments.py  smoke_test.py  train.py
src/: __init__.py  aggregator.py  attacks.py  client.py  data.py  evaluator.py  kd_trainer.py  model.py  server.py  trainer.py
tests/: test_privacy.py
